# testjni

./: CMakeLists.txt  CallbackExample.java  README.md  comple.sh  generate.sh
src/: CallbackExample.cpp  CallbackExample.h  CallbackExample_Callback.h  CallbackExample_CallbackData.h
